--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -727,7 +727,7 @@
 
     <!--Swap-->
 
-    <string name="Swap">Swap</string>
+    <string name="Swap_Tab_Title">Swap</string>
     <string name="Swap_FromAmountTitle">You Pay</string>
     <string name="Swap_ToAmountTitle">You Get</string>
     <string name="Swap_FiatPriceImpact" translatable="false">(%s%%)</string>
